feature/new-changes

--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/DodajNovoVozilo.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Vozilo/DodajNovoVozilo.cshtml
@@ -54,7 +54,7 @@
                 <td><input type="number" name="postanskiBroj" style="border-radius:9px; border-width:1px"/></td>
             </tr>
             <tr>
-                <td>Poster:</td>
+                <td>Poster ili dodatni opis:</td>
                 <td><input type="text" name="poster" style="border-radius:9px; border-width:1px"/></td>
             </tr>
             <tr>
