--- a/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/ProfilKorisnika.cshtml
+++ b/Rent-A-Car-PR-7-2016/Rent-A-Car-PR-7-2016/Views/Registracija/ProfilKorisnika.cshtml
@@ -62,7 +62,7 @@
     @if (Session["Korisnik"] != null)
     {
         Rent_A_Car_PR_7_2016.Models.Korisnik korisnik = (Rent_A_Car_PR_7_2016.Models.Korisnik)Session["Korisnik"];
-        if (korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.KLIJENT))
+        if (korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.KLIJENT) || korisnik.Uloga.Equals(Rent_A_Car_PR_7_2016.Models.UlogaKorisnika.POWER_KLIJENT))
         {
     <div style="margin-left:400px; font-family:'Comic Sans MS', Times, serif;">
         <h3 style="background-color:aliceblue; font-family:'Comic Sans MS', Times, serif;  opacity:0.7; font-weight:500; color:darkblue; width:324px; height:35px;  border-style:solid; border-color:skyblue; border-radius:12px; border-width:3px;">&nbsp Istorija vaših rezervacija</h3>
